--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,12 +20,16 @@ dependencies:
   flutter:
     sdk: flutter
 
-  http: ^0.12.0+2
+  # http: ^0.12.0+2
+  requests: ^3.0.3
   google_maps_flutter: ^0.5.21+12
+
+  flutter_bloc: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +51,17 @@ flutter:
    - assets/image_01.png
    - assets/metro.jpg
    - assets/metro2.jpg
+   - assets/json/linha_amarela.json
+   - assets/json/linha_azul.json
+   - assets/json/linha_coral.json
+   - assets/json/linha_diamante.json
+   - assets/json/linha_esmeralda.json
+   - assets/json/linha_jade.json
+   - assets/json/linha_lilas.json
+   - assets/json/linha_safira.json
+   - assets/json/linha_turquesa.json
+   - assets/json/linha_verde.json
+   - assets/json/linha_vermelha.json
 
 
   # To add assets to your application, add an assets section, like this:
